--- a/src/templates/main/base.html
+++ b/src/templates/main/base.html
@@ -114,7 +114,7 @@
       </div>
       <hr class="text-white my-0">
       <div class="text-center text-secondary py-3">
-        <small>Copyright &copy; 2021 {{ SITE_NAME }} • Web Developer (Python/Django)</small>
+        <small>&copy; 2021 {{ SITE_NAME }} • Web Developer (Python/Django)</small>
       </div>
     </div>
   </footer>
