Update email templates

--- a/src/templates/email/contact_to_email.html
+++ b/src/templates/email/contact_to_email.html
@@ -11,7 +11,7 @@
 <hr>
 <p style="color: #666; font-size: 12px; text-align: center;">
   <br>
-  <em>Copyright &copy; {% now "Y" %} <a href="{{ SITE_HOST }}">{{ SITE_NAME }}</a> • Web Developer (Python/Django)</em>
+  <em>&copy; 2021 <a href="{{ SITE_HOST }}">{{ SITE_NAME }}</a> • Web Developer (Python/Django)</em>
   <br>
   <br>
   <em>{% translate 'This is an automatic letter, do not reply to it.' %}</em>
