--- a/src/templates/errors/500.html
+++ b/src/templates/errors/500.html
@@ -13,7 +13,7 @@
 {% block content %}
 
 <section class="text-center py-5 my-5">
-  <img class="d-block mx-lg-auto img-fluid" src="{% static 'img/errors/500.png' %}" alt="">
+  <img class="d-block mx-lg-auto img-fluid" src="{% static 'img/errors/500.png' %}" alt="500">
   <h1 class="display-5 fw-bold">{% translate 'Internal Server Error!' %}</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-5">
