--- a/src/templates/contact/contact.html
+++ b/src/templates/contact/contact.html
@@ -81,16 +81,25 @@
       <form class="bg-light shadow rounded-1 p-4 p-md-5" action="{% url 'contact:contact' %}" method="post">
         {% csrf_token %}
         <div class="form-floating mb-3">
-          <input type="text" name="name" maxlength="250" class="form-control" placeholder="{% translate 'Your Name' %}" title="" required="" id="id_name">
+          <input type="text" name="name" maxlength="250" class="form-control{% if request.method == 'POST' %}{% if form.name.errors %} is-invalid{% else %} is-valid{% endif %}{% endif %}" placeholder="{% translate 'Your Name' %}" title="" required="" id="id_name"{% if form.name.data %} value="{{ form.name.data }}"{% endif %}>
           <label for="id_name">{% translate 'Your Name' %}</label>
+          {% for error_message in form.name.errors %}
+          <div class="invalid-feedback">{{ error_message }}</div>
+          {% endfor %}
         </div>
         <div class="form-floating mb-3">
-          <input type="email" name="email" maxlength="254" class="form-control" placeholder="{% translate 'Your Email' %}" title="" required="" id="id_email">
+          <input type="email" name="email" maxlength="254" class="form-control{% if request.method == 'POST' %}{% if form.email.errors %} is-invalid{% else %} is-valid{% endif %}{% endif %}" placeholder="{% translate 'Your Email' %}" title="" required="" id="id_email"{% if form.email.data %} value="{{ form.email.data }}"{% endif %}>
           <label for="id_email">{% translate 'Your Email' %}</label>
+          {% for error_message in form.email.errors %}
+          <div class="invalid-feedback">{{ error_message }}</div>
+          {% endfor %}
         </div>
         <div class="form-floating mb-3">
-          <textarea name="content" class="form-control" placeholder="{% translate 'Your Message' %}" title="" required="" id="id_content" style="height: 100px;"></textarea>
+          <textarea name="content" class="form-control{% if request.method == 'POST' %}{% if form.content.errors %} is-invalid{% else %} is-valid{% endif %}{% endif %}" placeholder="{% translate 'Your Message' %}" title="" required="" id="id_content" style="height: 100px;">{% if form.content.data %}{{ form.content.data }}{% endif %}</textarea>
           <label for="id_content">{% translate 'Your Message' %}</label>
+          {% for error_message in form.content.errors %}
+          <div class="invalid-feedback">{{ error_message }}</div>
+          {% endfor %}
         </div>
         <button class="w-100 btn btn-primary btn-lg" type="submit">{% translate 'Send Message' %}</button>
         <hr class="my-4">
