--- a/src/templates/email/contact_to_email_text.html
+++ b/src/templates/email/contact_to_email_text.html
@@ -5,6 +5,6 @@
 {% translate 'Email' %}: {{ form_email }}
 {% translate 'Content' %}: {{ form_content }}
 
-&copy; 2021 {{ SITE_NAME }} ({{ SITE_HOST }}) • Web Developer (Python/Django)
+Copyright &copy; {% now "Y" %} {{ SITE_NAME }} ({{ SITE_HOST }}) • Web Developer (Python/Django)
 
 {% translate 'This is an automatic letter, do not reply to it.' %}
