--- a/src/templates/main/base.html
+++ b/src/templates/main/base.html
@@ -77,7 +77,7 @@
               <img src="{% static 'img/logo_footer.png' %}" height="32">
               <span class="fs-4 ms-2">{{ SITE_NAME }}</span>
             </a>
-            <div class="btn-group dropup">
+            <div class="dropup">
               <a href="#" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">{{ LANGUAGE_CODE|upper }}</a>
               <ul class="dropdown-menu">
                 {% for language in LANGUAGES %}
