--- a/src/templates/main/index.html
+++ b/src/templates/main/index.html
@@ -21,15 +21,7 @@
       <img class="d-block mx-auto rounded-circle shadow my-5" src="{{ ABUSER.avatar.url }}" alt="Avatar" width="280" height="280">
       <h1 class="display-5 fw-normal text-white lh-1 mb-3">
         <span class="fw-light">{% translate 'Hi, I am' %}</span>
-        {% if LANGUAGE_CODE == 'en' %}
-        {{ ABUSER.first_name }}
-        {% else %}
-        {% for abuser_translation in ABUSER.abusertranslation_set.all %}
-        {% if abuser_translation.language == LANGUAGE_CODE %}
-        {{ abuser_translation.first_name }}
-        {% endif %}
-        {% endfor %}
-        {% endif %}
+        {{ ABUSER.get_first_name }}
       </h1>
       <div class="col-lg-6 mx-auto">
         <h2 class="mb-lg-5 mb-4 text-light text-opacity-75">{% translate 'Web Developer (Python/Django)' %}</h2>
@@ -142,15 +134,7 @@
           <li>
             <i class="fas fa-map-marker-alt"></i>
             <a class="link-contact text-decoration-none ps-3" href="{% url 'contact:contact' %}#map">
-              {% if LANGUAGE_CODE == 'en' %}
-              {{ ABUSER.address }}
-              {% else %}
-              {% for abuser_translation in ABUSER.abusertranslation_set.all %}
-              {% if abuser_translation.language == LANGUAGE_CODE %}
-              {{ abuser_translation.address }}
-              {% endif %}
-              {% endfor %}
-              {% endif %}
+              {{ ABUSER.get_address }}
             </a>
           </li>
           <li class="mt-4">
