--- a/src/templates/main/about.html
+++ b/src/templates/main/about.html
@@ -35,30 +35,14 @@
     <div class="col-lg-6">
       <div class="bg-white rounded-1 shadow p-4 p-md-5">
         <h1 class="display-5 fw-normal lh-1 mb-4">
-          {% if LANGUAGE_CODE == 'en' %}
-          {{ ABUSER.first_name }} {{ ABUSER.last_name }}
-          {% else %}
-          {% for abuser_translation in ABUSER.abusertranslation_set.all %}
-          {% if abuser_translation.language == LANGUAGE_CODE %}
-          {{ abuser_translation.first_name }} {{ abuser_translation.last_name }}
-          {% endif %}
-          {% endfor %}
-          {% endif %}
+          {{ ABUSER.get_first_name }} {{ ABUSER.get_last_name }}
         </h1>
         <p>
           {% translate 'Age' %}: {{ ABUSER.get_age }} {% translate 'years old' %}.<br>
           {% translate 'Date of Birth' %}: {{ ABUSER.date_of_birth }}
         </p>
         <div class="lead" align="justify">
-          {% if LANGUAGE_CODE == 'en' %}
-          {{ ABUSER.about|linebreaks }}
-          {% else %}
-          {% for abuser_translation in ABUSER.abusertranslation_set.all %}
-          {% if abuser_translation.language == LANGUAGE_CODE %}
-          {{ abuser_translation.about|linebreaks }}
-          {% endif %}
-          {% endfor %}
-          {% endif %}
+          {{ ABUSER.get_about|linebreaks }}
         </div>
       </div>
     </div>
