--- a/src/templates/portfolio/project_detail.html
+++ b/src/templates/portfolio/project_detail.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="col-lg-8 mx-auto lead mb-4 py-3" align="justify">
-      {{ object.get_description|linebreaks }}
+      {{ object.translated_description|linebreaks }}
     </div>
 
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
