--- a/src/templates/main/about.html
+++ b/src/templates/main/about.html
@@ -35,14 +35,14 @@
     <div class="col-lg-6">
       <div class="bg-white rounded-1 shadow p-4 p-md-5">
         <h1 class="display-5 fw-normal lh-1 mb-4">
-          {{ ABUSER.get_first_name }} {{ ABUSER.get_last_name }}
+          {{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}
         </h1>
         <p>
           {% translate 'Age' %}: {{ ABUSER.get_age }} {% translate 'years old' %}.<br>
           {% translate 'Date of Birth' %}: {{ ABUSER.date_of_birth }}
         </p>
         <div class="lead" align="justify">
-          {{ ABUSER.get_about|linebreaks }}
+          {{ ABUSER.translated_about|linebreaks }}
         </div>
       </div>
     </div>
