--- a/src/templates/main/experience.html
+++ b/src/templates/main/experience.html
@@ -29,7 +29,7 @@
   <div class="row align-items-center pt-5 pb-md-5 gy-md-5">
     <div class="col-lg-6">
       <div class="lead bg-white rounded-1 shadow p-4 p-md-5" align="justify">
-        {{ ABUSER.get_experience|linebreaks }}
+        {{ ABUSER.translated_experience|linebreaks }}
       </div>
     </div>
     <div class="col-lg-6 p-5 p-md-4">
