Update Home page

--- a/src/templates/main/index.html
+++ b/src/templates/main/index.html
@@ -76,11 +76,11 @@
         <ul class="list-group py-4">
           <li class="list-group-item border-0">
             <i class="far fa-check-circle text-success"></i>
-            <span>{% translate 'Building dynamic websites and web applications with latest technologies' %}</span>
+            <span>{% translate 'Front-end and Back-end development' %}</span>
           </li>
           <li class="list-group-item border-0">
             <i class="far fa-check-circle text-success"></i>
-            <span>{% translate 'Front-end and Back-end development' %}</span>
+            <span>{% translate 'Building dynamic websites and web applications with latest technologies' %}</span>
           </li>
           <li class="list-group-item border-0">
             <i class="far fa-check-circle text-success"></i>
@@ -178,7 +178,7 @@
       </div>
       <div class="ms-3">
         <h4 class="fw-bold mb-0">{% translate 'Latest Technologies' %}</h4>
-        <p class="lead mt-2">{% translate 'The websites are based on the popular Django and Bootstrap frameworks.' %}</p>
+        <p class="lead mt-2">{% translate 'The websites are based on the progressive Django, Vue.js and Bootstrap frameworks.' %}</p>
       </div>
     </div>
     <div class="col d-flex align-items-start">
