--- a/src/templates/main/index.html
+++ b/src/templates/main/index.html
@@ -24,7 +24,7 @@
         {{ ABUSER.translated_first_name }}
       </h1>
       <div class="col-lg-6 mx-auto">
-        <h2 class="mb-lg-5 mb-4 text-light text-opacity-75">{% translate 'Web Developer (Python/Django)' %}</h2>
+        <h2 class="mb-lg-5 mb-4 text-light text-opacity-75">{% translate 'Web Developer (Python/Django/Vue.js)' %}</h2>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <a class="btn btn-outline-primary btn-lg px-5 me-md-2" href="{% url 'main:about' %}">{% translate 'About me' %}</a>
         </div>
