Update Home page

--- a/src/templates/main/index.html
+++ b/src/templates/main/index.html
@@ -111,7 +111,7 @@
     </div>
     <div class="col-lg-6 lead">
       <h1 class="display-5 fw-normal lh-1 mb-3">{% translate 'My works' %}</h1>
-      <p class="py-4">{% translate 'In my practice there is a blog for DJs, a portal covering restaurant and club life, an online store, a social network of wedding photographers.' %}</p>
+      <p class="py-4">{% translate 'In my practice, there are sites of various kinds of activity: a blog, an online store, a social network, a business card site. I write standards-based code that is easy to maintain, cross-browser, and performant.' %}</p>
       <a class="link-primary text-decoration-none" href="{% url 'portfolio:portfolio' %}">
         {% translate 'View Portfolio' %}
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
