--- a/src/templates/portfolio/project_detail.html
+++ b/src/templates/portfolio/project_detail.html
@@ -53,7 +53,9 @@
       {% if object.project_url %}
       <a class="btn btn-primary btn-lg px-4 me-sm-3" target="_blank" href="{{ object.project_url }}">{% translate 'View Site' %}</a>
       {% endif %}
+      {% if object.code_url %}
       <a class="btn btn-outline-primary btn-lg px-4 me-sm-3" target="_blank" href="{{ object.code_url }}">{% translate 'View Code' %}</a>
+      {% endif %}
     </div>
   </div>
 </section>
