--- a/src/templates/portfolio/portfolio.html
+++ b/src/templates/portfolio/portfolio.html
@@ -33,7 +33,7 @@
       <a class="text-decoration-none link-dark" href="{{ project.get_absolute_url }}">
         <div class="project-div h-100">
           <img src="{{ project.thumbnail.url }}" class="project-img shadow-sm w-100" alt="{{ project.id }}">
-          <h5 class="project-name text-center p-3">{{ project.name }}</h5>
+          <h2 class="project-name h4 text-center p-3">{{ project.name }}</h2>
         </div>
       </a>
     </div>
