--- a/src/templates/portfolio/portfolio.html
+++ b/src/templates/portfolio/portfolio.html
@@ -4,8 +4,10 @@
 {% load static %}
 
 
-{% block title %}{% translate 'Portfolio' %}{% endblock title %}
+{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'Portfolio' %}{% endblock meta_description %}
+{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Portfolio' %}{% endblock meta_keywords %}
 
+{% block title %}{% translate 'Portfolio' %}{% endblock title %}
 
 {% block stylesheet %}{% endblock stylesheet %}
 
