--- a/src/templates/contact/contact.html
+++ b/src/templates/contact/contact.html
@@ -4,8 +4,10 @@
 {% load static %}
 
 
-{% block title %}{% translate 'Contact' %}{% endblock title %}
+{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'Contact' %}{% endblock meta_description %}
+{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Contact' %}{% endblock meta_keywords %}
 
+{% block title %}{% translate 'Contact' %}{% endblock title %}
 
 {% block stylesheet %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
