--- a/src/templates/main/base.html
+++ b/src/templates/main/base.html
@@ -7,8 +7,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="{{ SITE_NAME }}">
-  <meta name="keywords" content="{{ SITE_NAME }}, Web Developer">
+  <meta name="description" content="{% block meta_description %}{% endblock meta_description %}">
+  <meta name="keywords" content="{% block meta_keywords %}{% endblock meta_keywords %}">
   <meta name="author" content="Andrei Baliyevich">
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
   <title>{{ SITE_NAME }} | {% block title %}{% endblock title %}</title>
