--- a/src/templates/main/index.html
+++ b/src/templates/main/index.html
@@ -4,8 +4,10 @@
 {% load static %}
 
 
-{% block title %}{% translate 'Home' %}{% endblock title %}
+{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }} {% translate 'Web Developer (Python/Django/Vue.js)' %}{% endblock meta_description %}
+{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Web, Developer, Python, Django, Vue.js' %}{% endblock meta_keywords %}
 
+{% block title %}{% translate 'Home' %}{% endblock title %}
 
 {% block stylesheet %}{% endblock stylesheet %}
 
