--- a/src/templates/main/base.html
+++ b/src/templates/main/base.html
@@ -10,7 +10,8 @@
   <meta name="description" content="{% block meta_description %}{% endblock meta_description %}">
   <meta name="keywords" content="{% block meta_keywords %}{% endblock meta_keywords %}">
   <meta name="author" content="Andrei Baliyevich">
-  <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
   <title>{{ SITE_NAME }} | {% block title %}{% endblock title %}</title>
   {# STYLES #}
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
