--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -36,7 +36,7 @@
   display: none;
   position: fixed;
   bottom: 1.25rem;
-  right: 4.25rem;
+  left: 4.25rem;
   width: 3.75rem;
   height: 3.75rem;
   padding: 0.75rem;
@@ -55,15 +55,15 @@
 }
 @media(max-width: 1024px) {
   #btn-scroll-top {
-  bottom: 0.75rem;
-  right: 1.25rem;
+    bottom: 0.75rem;
+    left: 1.25rem;
   }
 }
 @media(max-width: 414px) {
   #btn-scroll-top {
-  width: 2.75rem;
-  height: 2.75rem;
-  font-size: 14px;
+    width: 2.75rem;
+    height: 2.75rem;
+    font-size: 14px;
   }
 }
 
@@ -136,4 +136,7 @@
   top: 0;
   left: 0;
   bottom: 0;
+}
+.grecaptcha-badge {
+  z-index: 1025;
 }
