--- a/src/templates/main/base.html
+++ b/src/templates/main/base.html
@@ -115,7 +115,7 @@
       </div>
       <hr class="text-white my-0">
       <div class="text-center text-secondary py-3">
-        <small>Copyright &copy; 2021-{% now "Y" %} {{ SITE_NAME }} • Web Developer (Python/Django/Vue.js)</small>
+        <small>Copyright &copy; 2021-{% now "Y" %} {{ SITE_NAME }} • Full Stack Web Developer</small>
       </div>
     </div>
   </footer>
