Update meta description and keywords

--- a/src/templates/contact/contact.html
+++ b/src/templates/contact/contact.html
@@ -4,8 +4,8 @@
 {% load static %}
 
 
-{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'Contact' %}{% endblock meta_description %}
-{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Contact' %}{% endblock meta_keywords %}
+{% block meta_description %}{% translate 'Contact me for web development services using Python, Django, and Vue. Learn how I can help you create efficient and modern solutions for your business.' %}{% endblock meta_description %}
+{% block meta_keywords %}{% translate 'contact, web development, Python, Django, Vue, web developer, website development, web applications, programming, contact developer' %}{% endblock meta_keywords %}
 
 {% block title %}{% translate 'Contact' %}{% endblock title %}
 
