--- a/src/templates/main/experience.html
+++ b/src/templates/main/experience.html
@@ -4,8 +4,8 @@
 {% load static %}
 
 
-{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'Experience' %}{% endblock meta_description %}
-{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Experience' %}{% endblock meta_keywords %}
+{% block meta_description %}{% translate 'My experience in web development using Python, Django, and Vue. Learn about the projects I’ve worked on, the skills I possess, and the approach I take when building web applications and websites.' %}{% endblock meta_description %}
+{% block meta_keywords %}{% translate 'experience, web development, Python, Django, Vue, web developer, application development, Python projects, Django experience, Vue experience, professional programming skills' %}{% endblock meta_keywords %}
 
 {% block title %}{% translate 'Experience' %}{% endblock title %}
 
