--- a/src/templates/main/index.html
+++ b/src/templates/main/index.html
@@ -4,8 +4,8 @@
 {% load static %}
 
 
-{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'Web Developer' %}{% endblock meta_description %}
-{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Web, Developer' %}{% endblock meta_keywords %}
+{% block meta_description %}{% translate 'Professional web development using Python, Django, and Vue. Building modern, efficient, and responsive websites and applications with the best technologies. Examples of projects and a web developer portfolio.' %}{% endblock meta_description %}
+{% block meta_keywords %}{% translate 'web development, Python, Django, Vue, web developer, website creation, web applications, Python development, Django development, Vue frontend, programming, portfolio development' %}{% endblock meta_keywords %}
 
 {% block title %}{% translate 'Home' %}{% endblock title %}
 
