--- a/src/templates/portfolio/portfolio.html
+++ b/src/templates/portfolio/portfolio.html
@@ -4,8 +4,8 @@
 {% load static %}
 
 
-{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'Portfolio' %}{% endblock meta_description %}
-{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'Portfolio' %}{% endblock meta_keywords %}
+{% block meta_description %}{% translate 'Portfolio of a web developer specializing in Python, Django, and Vue. Explore my projects and works created using modern technologies to build efficient web applications and websites.' %}{% endblock meta_description %}
+{% block meta_keywords %}{% translate 'portfolio, web development, Python, Django, Vue, projects, web developer, website development, web applications, Python projects, Django projects, Vue projects' %}{% endblock meta_keywords %}
 
 {% block title %}{% translate 'Portfolio' %}{% endblock title %}
 
