--- a/src/templates/main/about.html
+++ b/src/templates/main/about.html
@@ -4,8 +4,8 @@
 {% load static %}
 
 
-{% block meta_description %}{{ ABUSER.translated_first_name }} {{ ABUSER.translated_last_name }}. {% translate 'About' %}{% endblock meta_description %}
-{% block meta_keywords %}{{ ABUSER.translated_first_name }}, {{ ABUSER.translated_last_name }}, {% translate 'About' %}{% endblock meta_keywords %}
+{% block meta_description %}{% translate 'Learn more about me, a web developer specializing in Python, Django, and Vue. Explore my skills, experience, and approach to building modern, scalable web applications and websites.' %}{% endblock meta_description %}
+{% block meta_keywords %}{% translate 'about me, web developer, Python, Django, Vue, web development, programming, full-stack developer, Python developer, Django developer, Vue developer, professional web development' %}{% endblock meta_keywords %}
 
 {% block title %}{% translate 'About' %}{% endblock title %}
 
